Cleanup pass. Updated wording, fixed figures, etc

--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -444,3 +444,19 @@
   numpages = {15},
   timestamp = {2014.12.08},
 }
+@ARTICLE{Pellizzoni2008,
+  author = {Pellizzoni, Rodolfo and Meredith, Patrick and Caccamo, Marco and
+	Rosu, Grigore},
+  title = {{Hardware Runtime Monitoring for Dependable COTS-Based Real-Time
+	Embedded Systems}},
+  journal = {2008 Real-Time Systems Symposium},
+  year = {2008},
+  pages = {481--491},
+  month = nov,
+  __markedentry = {[akane:]},
+  doi = {10.1109/RTSS.2008.43},
+  file = {Pellizzoni2008.pdf:mPapers\\Pellizzoni2008.pdf:PDF},
+  isbn = {978-0-7695-3477-0},
+  publisher = {Ieee},
+  timestamp = {2014.12.08},
+}
