--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -79,7 +79,7 @@
 
 \begin{abstract}
 
-Although runtime monitoring (RM) is a promising technique to improve the verification of complex safety-critical systems, 
+Although runtime monitoring is a promising technique to improve the verification of complex safety-critical systems, 
 the general design trend towards utilizing black-box commercial-off-the-shelf (COTS) components means that these systems 
 are not always amenable to instrumentation which is commonly used to produce the relevant events necessary for checking 
 the desired properties. In this paper, we develop an online, real-time monitoring approach that targets an autonomous research 
