--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -41,16 +41,21 @@ This is a simple architecture which requires few (essentially no) changes to the
 Our monitoring algorithm is similar to existing dynamic programming and formula-rewriting based algorithms. 
 \paragraph{Dynamic programming monitors}
 %% garg/precis
-Our monitoring algorithm is inspired by the algorithms \greduce\ \cite{Garg2011} and \precis\ \cite{Chowdhury2014}, adjusted for our aggressive monitoring and propositional logic use case. The structure of our algorithm is based on \greduce\, utilizing an iterative, formula-rewriting based algorithm, also named $\mathbf{reduce}$, but targeted at both offline log analysis as well as online real-time monitoring. Both algorithms can return residual (i.e., incompletely reduced) formulas, but incompleteness in \greduce\ is due to incomplete logs which lead to unknown predicate substitutions, whereas our algorithm works on complete logs but must deal with temporal (i.e., future-time) incompleteness. 
-
-%% Hef/Rein
-Heffernan et. al. present a monitor for autonomotive systems using ISO 26262 as a guide to identify the monitored properties in \cite{Heffernan2014}. They monitor past-time LTL formulas and obtain system state from target system buses (CAN in their example). Our semi-formal interface is similar to their ``filters'' used to translate system state to the atomic propositions that are monitored. Their motivation and goals are similar to ours, but they use on-chip system-on-a-chip based monitors which utilize instrumentation to obtain system state, which is not suitable for monitoring black-box systems.
-Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors. 
-The actual implementation they describe does however presume system memory access to obtain system state (rather than using state from the target network).
+Our monitoring algorithm is inspired by the algorithms \greduce\ \cite{Garg2011} and \precis\ \cite{Chowdhury2014}, adjusted for propositional logic and eager checking. 
+The structure of our algorithm is based on \greduce{}. 
+We utilize an iterative, formula-rewriting based algorithm, also named $\mathbf{reduce}$, but targeted at both offline log analysis as well as online real-time monitoring. 
+Both algorithms can return residual (i.e., incompletely reduced) formulas, but incompleteness in \greduce\ is due to incomplete logs which lead to unknown predicate substitutions, whereas our algorithm works on complete logs but must deal with temporal (i.e., future-time) incompleteness. 
 
 %% dynamic prog algos -- thati/rosu, havelund, etc
 The NASA PathExplorer project has led to both a set of dynamic programming-based monitoring algorithms as well as some formula-rewriting based algorithms \cite{Havelund2004} for past-time LTL. These dynamic programming algorithms require checking the trace in reverse (from the end to the beginning) which makes them somewhat unsuitable for online monitoring \cite{Havelund2002}. The formula rewriting algorithms utilize the Maude term rewriting engine to efficiently monitor specifications through formula rewriting \cite{Rosu2005}. 
 %
 Thati and Ro\c{s}u \cite{Thati2005} describe an dynamic programming algorithm for monitoring MTL which is based on resolving the past and deriving the future. They perform formula rewriting which resolves past-time formulas into equivalent formulas without unguarded past-time operators and derive new future-time formulas which separate the current state from future state. 
 
+\paragraph{Embedded Monitors}
+%% Hef/Rein
+Heffernan et. al. present a monitor for autonomotive systems using ISO 26262 as a guide to identify the monitored properties in \cite{Heffernan2014}. They monitor past-time linear temporal logic (LTL) formulas and obtain system state from target system buses (CAN in their example). Our semi-formal interface is similar to their ``filters'' used to translate system state to the atomic propositions that are monitored. Their motivation and goals are similar to ours, but they use on-chip system-on-a-chip based monitors which utilize instrumentation to obtain system state, which is not suitable for monitoring black-box systems.
+Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors. 
+The actual implementation they describe does however presume system memory access to obtain system state (rather than using state from the target network).
+
+Pellizzoni et. al. describe a monitor for COTS peripherals in \cite{Pellizzoni2008}. They generate FPGA monitors that passively observe PCI-E buses to verify system properties. This is a similar architecture to ours, but they only check past-time LTL and regular expressions so they cannot perform eager checking.
 %%%%%%%%%%%%%%
