--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -66,7 +66,8 @@
 
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Runtime Monitoring for Safety-Critical Embedded Systems: A Case Study}
+%\title{Runtime Monitoring for Safety-Critical Embedded Systems: A Case Study}
+\title{A Case Study on Runtime Monitoring of an Autonomous Research Vehicle (ARV) System}
 
 
 \author{Aaron Kane \and Omar Chowdhury \and Anupam Datta \and Philip Koopman}
@@ -81,9 +82,9 @@
 
 \begin{abstract}
 
-Although runtime monitoring is a promising technique to improve the verification of complex safety-critical systems, 
+Although runtime monitoring (RM) is a promising technique to improve the verification of complex safety-critical systems, 
 the general design trend towards utilizing black-box commercial-off-the-shelf (COTS) components means that these systems 
-are not always amenable to instrumentation which is commonly used to produce the relevant events necessary for checking 
+are not always amenable to instrumentation which is commonly used in RM to produce the relevant events necessary for checking 
 the desired properties. In this paper, we develop an online, real-time monitoring approach that targets an autonomous research 
 vehicle (ARV) system and recount our experience with it. To avoid instrumentation we passively monitor the target system by 
 generating high-level property constructs (\ie, propositions) from the observed network state. 
