--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -6,7 +6,7 @@
 	% they require a predictive component in the system  -- we just want envelope
 	% horizon is delay
 	% observation map is semi-formal mapping
-In this section we briefly introduce the background concepts and relevant existing work that put this current work in perspective.  
+In this section we briefly introduce the background concepts and review relevant existing work that put the current work in perspective.  
 \subsection{Monitoring Safety-Critical Embedded Systems}
 \label{sec:bg:sc_monitor}
 Goodloe and Pike present a thorough survey of monitoring distributed real-time systems in \cite{Goodloe2010}. Notably, they present a set of monitor architecture constraints and propose three abstract monitor architectures in the context of monitoring these types of systems.
